brat/test/golden/error/kbadvec.brat
triple :: { Bit -o Vec(Bit, 3) }
triple = { b => [b] }
